package com.job.designpattern.iterator;

public abstract class Aggregate {
    public abstract Iterator createIterator();
}
